fixing spacing issues for joinus

--- a/components/Home/JoinUs/styles.module.scss
+++ b/components/Home/JoinUs/styles.module.scss
@@ -3,8 +3,8 @@
     z-index: 10;
     position: relative;
     display: block;
-    margin: 5em 0;
-    padding-top: 12vh;
+    margin: 4em 0;
+    // padding-top: 12vh;
 
     .joinusContainer {
         display: flex;
@@ -27,8 +27,6 @@
             height: fit-content;
         }
     }
-
-    
 
     .socialmediaContainer {
         position: absolute;
